# cpts_notes_structure

./: .gitignore  README.md  pyproject.toml
src/: final_folder_maker.py  folder_maker.py
