[tool.poetry]
name = "cpts-notes-structure"
version = "0.1.0"
description = "just a way to make new notes"
authors = ["deangelofloyd <deangelofloyd3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
